ISPN-14784 Only use -Djava.security.manager=allow since JDK 17